--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
             <div class="micro" style="margin-top:12px;">
               <span>Background: procurement & logistics (including government/DoD environments)</span>
-              <span>Built to solve a problem I saw repeatedly in the field</span>
+              <span>Built to solve problems</span>
             </div>
           </div>
 
